# django-tg-auth

./: manage.py  pyproject.toml
DjangoTgAauth/: asgi.py  settings.py  urls.py  wsgi.py
auth_telegram/: admin.py  apps.py  models.py  views.py
auth_telegram/management/commands/: bot.py
auth_telegram/migrations/: 0001_initial.py  0002_alter_telegramuser_first_name_and_more.py
auth_telegram/templates/: auth.html
