[tool.poetry]
name = "django-tg-auth"
version = "0.1.0"
description = "Сайт с авторизацией через ТГ"
authors = ["MakarGon <makar6002@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
pyTelegramBotAPI = "^4.24.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
